Early Dec 2022 updates - minor changes plus some OTP migration